K8S/redis/base/deploy.yml
apiVersion: "apps/v1"
kind: "StatefulSet"
metadata:
  name: "redis"
  namespace: "testing"
spec:
  serviceName: "redis"
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "redis"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "redis"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9121"
    spec:
      serviceAccount: "redis"
      containers:
        - name: "redis"
          image: "bitnami/redis:latest"
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - name: "redis-data"
              mountPath: "/bitnami/redis/data"
          ports:
            - containerPort: 6379
              protocol: "TCP"
              name: "client"
          resources:
            requests:
              cpu: "30m"
              memory: "128Mi"
            limits:
              cpu: "50m"
              memory: "256Mi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
            exec:
              command: ["redis-cli", "ping"]
        - name: "exporter"
          image: "bitnami/redis-exporter:latest"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 9121
              protocol: "TCP"
              name: "metrics"
          resources:
            requests:
              cpu: "30m"
              memory: "50Mi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
  volumeClaimTemplates:
    - metadata:
        name: "redis-data"
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "local-path"
        resources:
          requests:
            storage: "1Gi"
