K8S/redis/base/service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "testing"
  name: "redis"
spec:
  selector:
    app.kubernetes.io/name: "redis"
  ports:
    - name: "client"
      port: 6379
      protocol: "TCP"
      targetPort: 6379

---
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "testing"
  name: "redis-exporter"
spec:
  selector:
    app.kubernetes.io/name: "redis"
  ports:
    - name: "metrics"
      port: 9121
      protocol: "TCP"
      targetPort: 9121
