K8S/redis/base/policy.yml
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  namespace: "testing"
  name: "redis-external-access"
spec:
  policyTypes: ["Ingress"]
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "redis"
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              required.cache: "redis"
